# g1_locomotion

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
g1_description/: CMakeLists.txt  g1_23dof.urdf  g1_23dof.xml
g1_msgs/: CMakeLists.txt  package.xml
g1_msgs/msg/: ContactPoint.msg  Feet_reference.msg  SRBD_state.msg  State.msg
g1_mujoco_sim/: CMakeLists.txt  package.xml
g1_mujoco_sim/config/: MPC_QP_layout.xml  g1_srbd_full.rviz
g1_mujoco_sim/launch/: mpc_wbid_simulation.launch
g1_mujoco_sim/scripts/: config.py  ros_run_simulation.py  run_simulation.py  wbid.py
g1_mujoco_sim/src/: PD_controller.py  config.py  ros_run_simulation.py  run_simulation.py  swing_trajectory.py  viz.py  wbid.py
