<?xml version="1.0"?>
<package format="2">
  <name>g1_mujoco_sim</name>
  <version>0.0.1</version>
  <description>MuJoCo simulation package for G1 humanoid robot</description>

  <maintainer email="yiannisloizu@gmail.com">Ioannis Loizou</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>pinocchio</depend>
  
  <export>
  </export>
</package>
